--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/libs/OwlCarousel2-2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/libs/OwlCarousel2-2.3.4/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="assets/css/styles.css" />
-
+    <link rel="icon" href="assets/images/favicon.png" type="image/png">
     <script src="assets/libs/jquery-3.7.1/jquery-3.7.1.min.js"></script>
     <script src="assets/libs/OwlCarousel2-2.3.4/owl.carousel.min.js"></script>
     <script src="assets/js/scripts.js"></script>
