--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Portofolio | Ary Pambudi</title>
+    <title>Portfolio | Ary Pambudi</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" />
     <link rel="stylesheet" href="assets/libs/OwlCarousel2-2.3.4/assets/owl.carousel.min.css">
