--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Ary Pambudi</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" />
-    <link rel="stylesheet" href="assets/libs/OwlCarousel2-2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/libs/OwlCarousel2-2.3.4/assets/owl.theme.default.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" />
+    <link rel="stylesheet" type="text/css" href="assets/libs/OwlCarousel2-2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/libs/OwlCarousel2-2.3.4/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/styles-mobile.css" media="screen and (max-width: 767px)" />
     <link rel="icon" href="assets/images/favicon.png" type="image/png">
     <script src="assets/libs/jquery-3.7.1/jquery-3.7.1.min.js"></script>
     <script src="assets/libs/OwlCarousel2-2.3.4/owl.carousel.min.js"></script>
