Update : - Wording & styles

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                 <div class="pw-frames"><div class="pw-frame-a"></div><div class="pw-frame-b"></div><div class="pw-frame-c"></div></div>
                 <img src="assets/images/me.jpg" alt="me">
             </div>
-            <p>Hi there, and thanks for stopping by! I'm excited to share my portfolio with you—a space where my passion for both art and technology comes to life. As a UI/UX enthusiast, I love crafting interfaces that are not only functional but also visually engaging and user-friendly. Feel free to explore and see how I use HTML, CSS, JavaScript, and other tools to turn creative ideas into interactive experiences. Hope you enjoy your visit!</p>
-            <br>
+            <p>Hi there, and thanks for stopping by!<br>
+Welcome to my portfolio—a place where my love for design and technology comes together. As a UI/UX enthusiast, I enjoy creating interfaces that are functional, visually engaging, and easy to use. Here, you’ll find how I bring ideas to life through HTML, CSS, JavaScript, and other tools to build clean, interactive experiences.<br><br>
+Feel free to explore and take a look around. And if you ever want to dive deeper — whether it’s system design, architecture, or how I approach building solutions — just drop me a message. I’d be happy to chat!</p>
             <b>~ Ary</b>
             <div class="pw-media">
                 <a href="https://www.linkedin.com/in/arypambudi/" title="Open my Linked-In page"><img src="assets/images/icon-linkedin.png" alt="linkedin"></a>
